--- a/Presentation.Dashboard/Resources/ApplicationResource.vi.resx
+++ b/Presentation.Dashboard/Resources/ApplicationResource.vi.resx
@@ -117,11 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="City" xml:space="preserve">
-    <value>Thành phố</value>
-  </data>
   <data name="FullName" xml:space="preserve">
     <value>Tên đầy đủ</value>
+  </data>
+  <data name="Id" xml:space="preserve">
+    <value>Thành phố</value>
   </data>
   <data name="MobileNo" xml:space="preserve">
     <value>MobileNo</value>
