--- a/Presentation.Dashboard/Resources/ApplicationResource.en.resx
+++ b/Presentation.Dashboard/Resources/ApplicationResource.en.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="City" xml:space="preserve">
-    <value>Stadt</value>
+  <data name="dmCategory" xml:space="preserve">
+    <value>Category</value>
   </data>
-  <data name="FullName" xml:space="preserve">
-    <value>Vollständiger Name</value>
+  <data name="dmEmployee" xml:space="preserve">
+    <value>Staff</value>
   </data>
-  <data name="MobileNo" xml:space="preserve">
-    <value>Handynummer</value>
+  <data name="dmEmployeelist" xml:space="preserve">
+    <value>Staff list</value>
+  </data>
+  <data name="dmJobTitle" xml:space="preserve">
+    <value>Jobtitle list</value>
   </data>
 </root>
